--- a/styles/style3.css
+++ b/styles/style3.css
@@ -10,20 +10,19 @@ body {
   min-height: 100vh;
 }
 h1 {
-  font-size: 24px;
+  font-size: 32px;
 }
 .container {
   display: grid;
-  grid-template-columns: fit-content(200px) 1fr 300px;
-  grid-template-rows: repeat(3, 100px);
-  grid-gap: 5px;
-  text-align: center;
-  justify-content: stretch;
+  grid-template-columns: 1fr 1fr 300px;
+  grid-template-rows: 150px 1fr 150px;
+  grid-gap: 10px;
+  justify-content: space-around;
   align-content: space-between;
-  background-color: antiquewhite;
 }
 .header {
-  grid-area: ;
+  grid-column: 1/4;
+  grid-row: 1/2;
 }
 .sidebar {
   display: grid;
@@ -31,12 +30,20 @@ h1 {
   grid-column-end: span 4;
   grid-row-start: 1;
   grid-row-end: 4;
-  background-color: aquamarine;
+}
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  grid-template-columns: 1/3;
+  grid-template-rows: 2/3;
+  justify-content: center;
+  align-items: flex-start;
 }
 .form_contact-info {
   grid-template-columns: 1/3;
   grid-template-rows: 2/3;
-  background-color: beige;
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
 }
 .footer {
   grid-template-columns: 1/3;
