--- a/styles/style3.css
+++ b/styles/style3.css
@@ -36,12 +36,10 @@ h1 {
   flex-wrap: wrap;
   grid-template-columns: 1/3;
   grid-template-rows: 2/3;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: flex-start;
 }
-.form_contact-info {
-  grid-template-columns: 1/3;
-  grid-template-rows: 2/3;
+.form_contact-info_legend {
   font-size: 16px;
   font-family: "Poppins", sans-serif;
 }
